phonebook-chart/templates/resultserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: resultserver
  name: resultserver
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30002
  selector:
    app: resultserver
  type: NodePort
